add clickable token animation

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,15 @@ body {
 * {
   box-sizing: border-box;
 }
+
+@keyframes pulse {
+  0% {
+    opacity: 0.5;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.5;
+  }
+}
